welcome.lessons.welcome.methods.picture.PatternPicture.scala.error
PatternPicture:19: error: not found: value RED
  setCouleurBrosse(RED)
                   ^PatternPicture:31: error: not found: value GREEN
  setCouleurBrosse(GREEN)
                   ^PatternPicture:42: error: not found: value BLUE
  setCouleurBrosse(BLUE)
                   ^PatternPicture:53: error: not found: value YELLOW
  setCouleurBrosse(YELLOW)
                   ^PatternPicture:65: error: not found: value faireRouge
  faireRouge()
  ^