welcome.lessons.welcome.methods.picture.PatternPicture.scala.code
override def run() {
  for (i<- 1 to 2){
    for (i<- 1 to 2){
      faireMotif()
      for (i <- 1 to 4){
        avance()
      }
    gauche()
    for (i<- 1 to 4){
      avance()
    }
    droite()
    }
  }
}


def faireRed() {
  setCouleurBrosse(RED)
  avance()
  baisseBrosse()
  leveBrosse()
  recule();gauche();avance()
  baisseBrosse()
  leveBrosse()
  recule();droite()
}


def faireGreen() {
  setCouleurBrosse(GREEN)
  avance()
  baisseBrosse()
  leveBrosse()
  recule();gauche();avance()
  baisseBrosse()
  leveBrosse()
  recule();droite()  
}

def faireBlue() {
  setCouleurBrosse(BLUE)
  baisseBrosse()
  leveBrosse()
  avance()
  gauche();avance()
  baisseBrosse()
  leveBrosse()
  recule();gauche();recule()
}

def faireYellow() {
  setCouleurBrosse(YELLOW)
  baisseBrosse()
  leveBrosse()
  avance()
  gauche();avance()
  baisseBrosse()
  leveBrosse()
  recule();gauche();recule()
}

def faireMotif() {
  
  faireRouge()
  
  avance();avance()
  
  faireBlue()
  
  gauche();avance();avance();droite()
  
  faireGreen()
  
  recule();recule()
  
  faireYellow
  
  gauche;recule();recule();droite()
  
}